--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="setting.js"></script>
   <link rel="stylesheet" href="main.css" />
   <body>
     <div id="game">
